@@ -1,5 +1,15 @@
 2004-09-08  Chris Blumenberg  <cblu@apple.com>
 
+	Fixed: <rdar://problem/3792893> WebBaseResourceHandleDelegate always returns cached data for subresource loads
+
+        Reviewed by rjw.
+
+        * WebView.subproj/WebBaseResourceHandleDelegate.m:
+        (-[WebBaseResourceHandleDelegate _canUseResourceForRequest:]): new
+        (-[WebBaseResourceHandleDelegate loadWithRequest:]): call _canUseResourceForRequest:
+
+2004-09-08  Chris Blumenberg  <cblu@apple.com>
+
 	Forgot to add this in previous check-in.	
 
         * English.lproj/WebViewEditingContextMenu.nib: Added.
